[package]
name = "rust-tls-wasm"
version = "0.1.1"
authors = ["EithonX"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
rustls-pki-types = { version = "1.14", features = ["web", "std"] }
webpki-roots = "1"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 'z'     # Optimize for strictly for payload size
lto = true          # Enable Link Time Optimization (huge size reduction)
codegen-units = 1   # Reduce parallel code generation to optimize LTO mathematically
panic = 'abort'     # Abort on panic instead of unrolling stack traces (massive size savings)
strip = true        # Automatically strip internal debug symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
